# test-assignment

./: .gitignore  Dockerfile  README.md  api_langchain.py  api_main.py  api_prebuilt.py  api_server.py  audio.txt  call_analysis.db  call_analyzer.py  calls_database.db  dashboard.py  db_utils.py  production_calls.db  pyproject.toml  requirements.txt  s3_utils.py  test_kotak_conversation.py
frontend/: index.html  package.json  vite.config.js
frontend/src/: App.jsx  index.css
with_langchain/: .env  call_analysis.db  main.py  orchestrator.py  requirements_agents.txt
