[project]
name = "test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.13.3",
    "aiohttp-retry==2.9.1",
    "aiosignal==1.4.0",
    "altair==5.4.1",
    "annotated-types==0.7.0",
    "anyio==4.12.0",
    "appnope==0.1.4",
    "apscheduler==3.10.4",
    "asttokens==2.4.1",
    "asyncpg>=0.31.0",
    "attrs==24.2.0",
    "autobahn==19.11.2",
    "automat==24.8.1",
    "beautifulsoup4==4.12.3",
    "bidict==0.23.1",
    "binary-reader==1.4.3",
    "blinker==1.9.0",
    "boto3==1.42.55",
    "botocore==1.42.55",
    "brotli==1.1.0",
    "cachetools==5.5.0",
    "certifi==2024.8.30",
    "cffi==1.17.1",
    "charset-normalizer==3.4.0",
    "click==8.1.7",
    "colorama==0.4.6",
    "comm==0.2.2",
    "constantly==23.10.4",
    "contourpy==1.3.1",
    "cryptography==43.0.3",
    "cycler==0.12.1",
    "debugpy==1.8.8",
    "decorator==5.1.1",
    "dill==0.3.9",
    "distro==1.9.0",
    "dnspython==2.7.0",
    "dotenv==0.9.9",
    "et-xmlfile==2.0.0",
    "executing==2.1.0",
    "fastapi[standard]>=0.115.6",
    "faster-whisper>=1.2.1",
    "flask==3.0.3",
    "fonttools==4.54.1",
    "frozendict==2.4.6",
    "frozenlist==1.8.0",
    "func-timeout==4.3.5",
    "future==1.0.0",
    "gitdb==4.0.11",
    "gitpython==3.1.43",
    "greenlet==3.1.1",
    "h11==0.16.0",
    "html5lib==1.1",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "hyperlink==21.0.0",
    "idna==3.10",
    "incremental==24.7.2",
    "ipykernel==6.29.5",
    "ipython==8.29.0",
    "isodate==0.7.2",
    "itsdangerous==2.2.0",
    "jedi==0.19.2",
    "jinja2==3.1.4",
    "jiter==0.12.0",
    "jmespath==1.1.0",
    "jsonpatch==1.33",
    "jsonpointer==3.0.0",
    "jsonschema==4.23.0",
    "jsonschema-specifications==2024.10.1",
    "jupyter-client==8.6.3",
    "jupyter-core==5.7.2",
    "kiteconnect==5.0.1",
    "kiwisolver==1.4.7",
    "langchain==1.2.10",
    "langchain-core==1.2.13",
    "langchain-ollama==1.0.1",
    "langchain-openai==1.1.1",
    "langgraph==1.0.8",
    "langgraph-checkpoint==3.0.1",
    "langgraph-checkpoint-postgres==3.0.4",
    "langgraph-prebuilt==1.0.7",
    "langgraph-sdk==0.3.6",
    "langsmith==0.4.56",
    "logzero==1.7.0",
    "lxml==5.3.0",
    "mangum==0.21.0",
    "markdown-it-py==3.0.0",
    "markupsafe==3.0.2",
    "matplotlib==3.9.2",
    "matplotlib-inline==0.1.7",
    "mdurl==0.1.2",
    "millify==0.1.1",
    "mouseinfo==0.1.3",
    "multidict==6.7.0",
    "multitasking==0.0.11",
    "narwhals==1.13.4",
    "nest-asyncio==1.6.0",
    "nsepython==2.97",
    "numpy==2.1.3",
    "ollama==0.6.1",
    "openai==2.9.0",
    "openpyxl==3.1.5",
    "orjson==3.11.5",
    "ormsgpack==1.12.0",
    "packaging==24.2",
    "pandas==2.2.3",
    "parso==0.8.4",
    "peewee==3.17.8",
    "pexpect==4.9.0",
    "pillow==11.0.0",
    "platformdirs==4.3.6",
    "plotly==5.24.1",
    "prompt-toolkit==3.0.48",
    "propcache==0.4.1",
    "protobuf==5.28.3",
    "psutil==6.1.0",
    "psycopg==3.3.2",
    "psycopg-pool==3.3.0",
    "psycopg2-binary==2.9.11",
    "ptyprocess==0.7.0",
    "pure-eval==0.2.3",
    "py-lets-be-rational==1.0.1",
    "py-vollib==1.0.1",
    "pyarrow==18.0.0",
    "pyasn1==0.6.1",
    "pyasn1-modules==0.4.1",
    "pyautogui==0.9.54",
    "pycparser==2.22",
    "pycrypto==2.6.1",
    "pydantic==2.12.5",
    "pydantic-core==2.41.5",
    "pydeck==0.9.1",
    "pygetwindow==0.0.9",
    "pygments==2.18.0",
    "pyjwt==2.10.1",
    "pymongo==4.10.1",
    "pymsgbox==1.0.9",
    "pyobjc-core==12.1",
    "pyobjc-framework-cocoa==12.1",
    "pyobjc-framework-quartz==12.1",
    "pyodbc==5.2.0",
    "pyopenssl==24.2.1",
    "pyotp==2.9.0",
    "pyparsing==3.2.0",
    "pyperclip==1.9.0",
    "pyrect==0.2.0",
    "pyscreeze==1.0.1",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.1.0",
    "python-engineio==4.10.1",
    "python-socketio==5.11.4",
    "pytweening==1.2.0",
    "pytz==2024.2",
    "pyyaml==6.0.3",
    "pyzmq==26.2.0",
    "rdflib==7.5.0",
    "rdflib-jsonld==0.6.2",
    "redis==5.2.0",
    "referencing==0.35.1",
    "regex==2025.11.3",
    "requests==2.32.3",
    "requests-toolbelt==1.0.0",
    "rich==13.9.4",
    "rpds-py==0.21.0",
    "rubicon-objc==0.5.3",
    "s3transfer==0.16.0",
    "scipy==1.14.1",
    "seaborn==0.13.2",
    "service-identity==24.2.0",
    "simple-websocket==1.1.0",
    "simplejson==3.19.3",
    "six==1.16.0",
    "smartapi==1.1.0",
    "smartapi-python==1.5.5",
    "smmap==5.0.1",
    "sniffio==1.3.1",
    "soupsieve==2.6",
    "sqlalchemy==2.0.36",
    "stack-data==0.6.3",
    "stocknotebridge==3.0.0",
    "streamlit==1.40.1",
    "streamlit-card==1.0.2",
    "tenacity==9.0.0",
    "tiktoken==0.12.0",
    "toml==0.10.2",
    "tornado==6.4.1",
    "tqdm==4.67.1",
    "traitlets==5.14.3",
    "transformers>=5.2.0",
    "twilio==9.9.1",
    "twisted==24.10.0",
    "txaio==23.1.1",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "tzdata==2025.2",
    "tzlocal==5.2",
    "urllib3==2.2.3",
    "uuid-utils==0.12.0",
    "uv==0.9.16",
    "watchdog==6.0.0",
    "wcwidth==0.2.13",
    "webencodings==0.5.1",
    "websocket-client==1.8.0",
    "werkzeug==3.1.3",
    "wsproto==1.2.0",
    "xgboost==2.1.2",
    "xlsxwriter==3.2.0",
    "xxhash==3.6.0",
    "yarl==1.22.0",
    "yfinance==0.2.49",
    "zope-interface==7.1.1",
    "zstandard==0.25.0",
]
